--- a/src/styles/push-notifications.css
+++ b/src/styles/push-notifications.css
@@ -91,6 +91,8 @@ h1,
 
 h2,
 .h2 {
+	/* for spans */
+	position: relative;
 	font-size: 2.6rem;
 	font-style: italic;
 	letter-spacing: .1rem;
@@ -111,6 +113,25 @@ h3,
 .h3 {
 	font-size: 1.3rem;
 	letter-spacing: .06rem;
+}
+
+.title-step {
+	font-family: "Segoe UI", Segoe, "Segoe WP", "Lucida Grande", "Lucida Sans", Verdana, sans-serif;
+	position: absolute;
+	top: -1rem;
+	left: 0;
+	right: 0;
+	
+	margin: 0 auto;
+	max-width: 6rem;
+	
+	font-size: .9rem;
+	font-style: normal;	
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: .01rem;
+
+	color: #9b8e6e;	
 }
 
 .c-nav-bar {
