Anton's code formatting edits

--- a/src/styles/push-notifications.css
+++ b/src/styles/push-notifications.css
@@ -33,6 +33,14 @@ a:hover {
 	color: #666;
 }
 
+.l-section--banner--dark a:link, a:visited {
+	color: #dbccaa;
+}
+
+.l-section--banner--dark a:hover {
+	color: #c3a86f;
+}
+
 /*
  *	FORM ELEMENTS
  *	---------------------------------------------
